--- a/trangchu.html
+++ b/trangchu.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cửa Hàng Điện Tử</title>
-    <link rel="stylesheet" href="trangchu.css">
-    <script src="trangchu.js" defer></script>
+    <link rel="stylesheet" href="./css/trangchu.css">
+    <script src="./js/trangchu.js" defer></script>
 </head>
 <body>
     <header>
@@ -149,6 +149,57 @@
   </div>
   <button class="next-btn"><img src="./images/next-arrow.png"></button>
 </section>
-
+<footer>
+  <div class="footer-container">
+    <div class="footer-column">
+      <h3>Mua sắm & Tìm hiểu</h3>
+      <ul>
+        <li><a href="trangchu.html#mac">Mac</a></li>
+        <li><a href="trangchu.html#ipad">iPad</a></li>
+        <li><a href="trangchu.html#iphone">iPhone</a></li>
+        <li><a href="trangchu.html#watch">Watch</a></li>
+        <li><a href="trangchu.html#airpods">AirPods</a></li>
+        <li><a href="trangchu.html#phukien">Phụ kiện</a></li>
+      </ul>
+    </div>
+    <div class="footer-column">
+      <h3>Tài khoản & Dịch vụ</h3>
+      <ul>
+        <li><a href="#">Quản lý tài khoản</a></li>
+        <li><a href="#">Lịch sử mua hàng</a></li>
+        <li><a href="#">Trung tâm hỗ trợ</a></li>
+        <li><a href="#">Chính sách bảo hành</a></li>
+        <li><a href="#">Chính sách đổi trả</a></li>
+      </ul>
+    </div>
+    <div class="footer-column">
+      <h3>Về Eden Tech</h3>
+      <ul>
+        <li><a href="#">Giới thiệu</a></li>
+        <li><a href="#">Hệ thống cửa hàng</a></li>
+        <li><a href="#">Tuyển dụng</a></li>
+        <li><a href="#">Liên hệ</a></li>
+      </ul>
+    </div>
+    <div class="footer-column">
+        <h3>Theo dõi chúng tôi</h3>
+        <div class="social-icons">
+            <a href="#"><img src="./images/facebook.png" alt="Facebook"></a>
+            <a href="#"><img src="./images/instagram.png" alt="Instagram"></a>
+            <a href="#"><img src="./images/tiktok.png" alt="Tiktok"></a>
+        </div>
+        <h3>Thông tin liên hệ</h3>
+        <p>
+            Địa chỉ: 123, Đường 3/2, Ninh Kiều, Cần Thơ<br>
+            Hotline: 1900 1234<br>
+            Email: support@edentech.vn
+        </p>
+    </div>
+  </div>
+  <div class="footer-bottom">
+    <p>Copyright © 2025 Eden Tech. All rights reserved.</p>
+  </div>
+</footer>
 </body>
+
 </html>
