--- a/form_add_product.html
+++ b/form_add_product.html
@@ -46,7 +46,7 @@
 </head>
 <body>
 
-  <form action="insert_product.php" method="POST" enctype="multipart/form-data">
+  <form action="php/insert_product.php" method="POST" enctype="multipart/form-data">
     <h2>Thêm sản phẩm mới</h2>
     
     <input type="text" name="name" placeholder="Tên sản phẩm" required>
