--- a/chitiet.html
+++ b/chitiet.html
@@ -1,92 +1,100 @@
 <!DOCTYPE html>
 <html lang="vi">
+
 <head>
   <meta charset="UTF-8">
   <title>Chi tiết sản phẩm</title>
   <link rel="stylesheet" href="./css/trangchu.css">
   <link rel="stylesheet" href="./css/chitiet.css">
 </head>
+
 <body>
 
   <header>
     <div class="logo">Eden Tech</div>
     <nav>
-        <a href="trangchu.html#iphone">iPhone</a>
-        <a href="trangchu.html#mac">Mac</a>
-        <a href="trangchu.html#ipad">iPad</a>
-        <a href="trangchu.html#watch">Apple Watch</a>
-        <a href="trangchu.html#airpods">AirPods</a>
-        <a href="trangchu.html#phukien">Phụ Kiện</a>
+      <a href="trangchu.html#iphone">iPhone</a>
+      <a href="trangchu.html#mac">Mac</a>
+      <a href="trangchu.html#ipad">iPad</a>
+      <a href="trangchu.html#watch">Apple Watch</a>
+      <a href="trangchu.html#airpods">AirPods</a>
+      <a href="trangchu.html#phukien">Phụ Kiện</a>
     </nav>
     <div class="header-right">
-        <div class="search-bar">
-         <img src="./images/search.png" alt="Tìm kiếm" class="search-toggle">
-             <input type="text" placeholder="Tìm kiếm sản phẩm..." aria-label="Tìm kiếm sản phẩm" class="search-input hidden">
+      <div class="search-bar">
+        <img src="./images/search.png" alt="Tìm kiếm" class="search-toggle">
+        <input type="text" placeholder="Tìm kiếm sản phẩm..." aria-label="Tìm kiếm sản phẩm"
+          class="search-input hidden">
+      </div>
+      <a href="giohang.html" class="icon-button">
+        <img src="./images/shopping-bag.png" alt="Giỏ hàng" class="icon-img">
+      </a>
+      <div class="profile-dropdown">
+        <div class="profile-toggle">
+          <img id="profile-avatar" src="images/avatars/default.png" alt="Tài khoản">
         </div>
-         <a href="cart.html" class="icon-button">
-            <img src="./images/shopping-bag.png" alt="Giỏ hàng" class="icon-img">
-        </a>
-         <a href="login.html" class="icon-button">
-            <img src="./images/user.png" alt="Tài khoản" class="icon-img">
-        </a>
+        <div class="dropdown-menu">
+        </div>
+      </div>
     </div>
   </header>
   <div class="container" id="product-detail">
     <p>Đang tải sản phẩm...</p>
   </div>
   <footer>
-  <div class="footer-container">
-    <div class="footer-column">
-      <h3>Mua sắm & Tìm hiểu</h3>
-      <ul>
-        <li><a href="trangchu.html#mac">Mac</a></li>
-        <li><a href="trangchu.html#ipad">iPad</a></li>
-        <li><a href="trangchu.html#iphone">iPhone</a></li>
-        <li><a href="trangchu.html#watch">Watch</a></li>
-        <li><a href="trangchu.html#airpods">AirPods</a></li>
-        <li><a href="trangchu.html#phukien">Phụ kiện</a></li>
-      </ul>
-    </div>
-    <div class="footer-column">
-      <h3>Tài khoản & Dịch vụ</h3>
-      <ul>
-        <li><a href="#">Quản lý tài khoản</a></li>
-        <li><a href="#">Lịch sử mua hàng</a></li>
-        <li><a href="#">Trung tâm hỗ trợ</a></li>
-        <li><a href="#">Chính sách bảo hành</a></li>
-        <li><a href="#">Chính sách đổi trả</a></li>
-      </ul>
-    </div>
-    <div class="footer-column">
-      <h3>Về Eden Tech</h3>
-      <ul>
-        <li><a href="#">Giới thiệu</a></li>
-        <li><a href="#">Hệ thống cửa hàng</a></li>
-        <li><a href="#">Tuyển dụng</a></li>
-        <li><a href="#">Liên hệ</a></li>
-      </ul>
-    </div>
-    <div class="footer-column">
+    <div class="footer-container">
+      <div class="footer-column">
+        <h3>Mua sắm & Tìm hiểu</h3>
+        <ul>
+          <li><a href="trangchu.html#mac">Mac</a></li>
+          <li><a href="trangchu.html#ipad">iPad</a></li>
+          <li><a href="trangchu.html#iphone">iPhone</a></li>
+          <li><a href="trangchu.html#watch">Watch</a></li>
+          <li><a href="trangchu.html#airpods">AirPods</a></li>
+          <li><a href="trangchu.html#phukien">Phụ kiện</a></li>
+        </ul>
+      </div>
+      <div class="footer-column">
+        <h3>Tài khoản & Dịch vụ</h3>
+        <ul>
+          <li><a href="#">Quản lý tài khoản</a></li>
+          <li><a href="#">Lịch sử mua hàng</a></li>
+          <li><a href="#">Trung tâm hỗ trợ</a></li>
+          <li><a href="#">Chính sách bảo hành</a></li>
+          <li><a href="#">Chính sách đổi trả</a></li>
+        </ul>
+      </div>
+      <div class="footer-column">
+        <h3>Về Eden Tech</h3>
+        <ul>
+          <li><a href="#">Giới thiệu</a></li>
+          <li><a href="#">Hệ thống cửa hàng</a></li>
+          <li><a href="#">Tuyển dụng</a></li>
+          <li><a href="#">Liên hệ</a></li>
+        </ul>
+      </div>
+      <div class="footer-column">
         <h3>Theo dõi chúng tôi</h3>
         <div class="social-icons">
-            <a href="#"><img src="./images/facebook.png" alt="Facebook"></a>
-            <a href="#"><img src="./images/instagram.png" alt="Instagram"></a>
-            <a href="#"><img src="./images/tiktok.png" alt="Tiktok"></a>
+          <a href="#"><img src="./images/facebook.png" alt="Facebook"></a>
+          <a href="#"><img src="./images/instagram.png" alt="Instagram"></a>
+          <a href="#"><img src="./images/tiktok.png" alt="Tiktok"></a>
         </div>
         <h3>Thông tin liên hệ</h3>
         <p>
-            Địa chỉ: 123, Đường 3/2, Ninh Kiều, Cần Thơ<br>
-            Hotline: 1900 1234<br>
-            Email: support@edentech.vn
+          Địa chỉ: 123, Đường 3/2, Ninh Kiều, Cần Thơ<br>
+          Hotline: 1900 1234<br>
+          Email: support@edentech.vn
         </p>
+      </div>
     </div>
-  </div>
-  <div class="footer-bottom">
-    <p>Copyright © 2025 Eden Tech. All rights reserved.</p>
-  </div>
-</footer>
+    <div class="footer-bottom">
+      <p>Copyright © 2025 Eden Tech. All rights reserved.</p>
+    </div>
+  </footer>
 
   <script src="./js/chitiet.js"></script>
-  <script src="./js/trangchu.js" defer></script> 
+  <script src="./js/trangchu.js" defer></script>
 </body>
+
 </html>
