--- a/trangchu.html
+++ b/trangchu.html
@@ -1,205 +1,212 @@
 <!DOCTYPE html>
 <html lang="vi">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cửa Hàng Điện Tử</title>
-    <link rel="stylesheet" href="./css/trangchu.css">
-    <script src="./js/trangchu.js" defer></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cửa Hàng Điện Tử</title>
+  <link rel="stylesheet" href="./css/trangchu.css">
+  <script src="./js/trangchu.js" defer></script>
 </head>
+
 <body>
-    <header>
-        <div class="logo">LOGO</div>
-        <nav>
-            <a href="#iphone">iPhone</a>
-            <a href="#mac">Mac</a>
-            <a href="#ipad">iPad</a>
-            <a href="#watch">Apple Watch</a>
-            <a href="#airpods">AirPods</a>
-            <a href="#phukien">Phụ Kiện</a>
-        </nav>
-        <div class="header-right">
-            <div class="search-bar">
-             <img src="./images/search.png" alt="Tìm kiếm" class="search-toggle">
-                 <input type="text" placeholder="Tìm kiếm sản phẩm..." aria-label="Tìm kiếm sản phẩm" class="search-input hidden">
-            </div>
+  <header>
+    <div class="logo">LOGO</div>
+    <nav>
+      <a href="#iphone">iPhone</a>
+      <a href="#mac">Mac</a>
+      <a href="#ipad">iPad</a>
+      <a href="#watch">Apple Watch</a>
+      <a href="#airpods">AirPods</a>
+      <a href="#phukien">Phụ Kiện</a>
+    </nav>
+    <div class="header-right">
+      <div class="search-bar">
+        <img src="./images/search.png" alt="Tìm kiếm" class="search-toggle">
+        <input type="text" placeholder="Tìm kiếm sản phẩm..." aria-label="Tìm kiếm sản phẩm"
+          class="search-input hidden">
+      </div>
 
-             <a href="cart.html" class="icon-button">
-                <img src="./images/shopping-bag.png" alt="Giỏ hàng" class="icon-img">
-            </a>
+      <a href="giohang.html" class="icon-button">
+        <img src="./images/shopping-bag.png" alt="Giỏ hàng" class="icon-img">
+      </a>
 
-             <a href="login.html" class="icon-button">
-                <img src="./images/user.png" alt="Tài khoản" class="icon-img">
-            </a>
-</div>
-    </header>
-
-    <section class="hero">
-        <h1>Cửa Hàng. Cách tốt nhất để mua sản phẩm bạn thích.</h1>
-        <div class="product-categories">
-            <div class="category" tabindex="0">
-                <img src="./images/header1store-card-13-mac-nav-202503.png" alt="Mac">
-                <span>Mac</span>
-            </div>
-            <div class="category" tabindex="0">
-                <img src="./images/header2store-card-13-iphone-nav-202502.png" alt="iPhone">
-                <span>iPhone</span>
-            </div>
-            <div class="category" tabindex="0">
-                <img src="./images/header3store-card-13-ipad-nav-202405.png" alt="iPad">
-                <span>iPad</span>
-            </div>
-            <div class="category" tabindex="0">
-                <img src="./images/header4store-card-13-watch-nav-202409.png" alt="Apple Watch">
-                <span>Apple Watch</span>
-            </div>
-            <div class="category" tabindex="0">
-                <img src="./images/header5store-card-13-airpods-nav-202409.png" alt="AirPods">
-                <span>AirPods</span>
-            </div>
-            <div class="category" tabindex="0">
-                <img src="./images/header6store-card-13-airtags-nav-202108.png" alt="AirTag">
-                <span>AirTag</span>
-            </div>
-            <div class="category" tabindex="0">
-                <img src="./images/header7store-card-13-appletv-nav-202210.png" alt="TV 4K">
-                <span>TV 4K</span>
-            </div>
-            <div class="category" tabindex="0">
-                <img src="./images/haeder8store-card-13-accessories-nav-202503.png" alt="Phụ Kiện">
-                <span>Phụ Kiện</span>
-            </div>
+      <div class="profile-dropdown">
+        <div class="profile-toggle">
+          <img id="profile-avatar" src="images/avatars/user.png" alt="Tài khoản">
         </div>
-    </section>
-
-<section class="products" id="iphone">
-  <button class="prev-btn"><img src="./images/prev-arrow.png"></button>
-
-  <h2>iPhone</h2>
-
-  <div class="carousel">
-    <div class="product-list">
-            <!-- sản phẩm ở đây -->
+        <div class="dropdown-menu">
+        </div>
+      </div>
     </div>
-  </div>
-  <button class="next-btn"><img src="./images/next-arrow.png"></button>
-</section>
+  </header>
 
-<section class="products" id="mac">
-  <button class="prev-btn"><img src="./images/prev-arrow.png"></button>
-
-  <h2>Mac</h2>
-
-  <div class="carousel">
-    <div class="product-list">
-            <!-- sản phẩm ở đây -->
+  <section class="hero">
+    <h1>Cửa Hàng. Cách tốt nhất để mua sản phẩm bạn thích.</h1>
+    <div class="product-categories">
+      <div class="category" tabindex="0">
+        <img src="./images/header1store-card-13-mac-nav-202503.png" alt="Mac">
+        <span>Mac</span>
+      </div>
+      <div class="category" tabindex="0">
+        <img src="./images/header2store-card-13-iphone-nav-202502.png" alt="iPhone">
+        <span>iPhone</span>
+      </div>
+      <div class="category" tabindex="0">
+        <img src="./images/header3store-card-13-ipad-nav-202405.png" alt="iPad">
+        <span>iPad</span>
+      </div>
+      <div class="category" tabindex="0">
+        <img src="./images/header4store-card-13-watch-nav-202409.png" alt="Apple Watch">
+        <span>Apple Watch</span>
+      </div>
+      <div class="category" tabindex="0">
+        <img src="./images/header5store-card-13-airpods-nav-202409.png" alt="AirPods">
+        <span>AirPods</span>
+      </div>
+      <div class="category" tabindex="0">
+        <img src="./images/header6store-card-13-airtags-nav-202108.png" alt="AirTag">
+        <span>AirTag</span>
+      </div>
+      <div class="category" tabindex="0">
+        <img src="./images/header7store-card-13-appletv-nav-202210.png" alt="TV 4K">
+        <span>TV 4K</span>
+      </div>
+      <div class="category" tabindex="0">
+        <img src="./images/haeder8store-card-13-accessories-nav-202503.png" alt="Phụ Kiện">
+        <span>Phụ Kiện</span>
+      </div>
     </div>
-  </div>
-  <button class="next-btn"><img src="./images/next-arrow.png"></button>
-</section>
+  </section>
 
-<section class="products" id="ipad">
-  <button class="prev-btn"><img src="./images/prev-arrow.png"></button>
+  <section class="products" id="iphone">
+    <button class="prev-btn"><img src="./images/prev-arrow.png"></button>
 
-  <h2>iPad</h2>
+    <h2>iPhone</h2>
 
-  <div class="carousel">
-    <div class="product-list">
-            <!-- sản phẩm ở đây -->
+    <div class="carousel">
+      <div class="product-list">
+        <!-- sản phẩm ở đây -->
+      </div>
     </div>
-  </div>
-  <button class="next-btn"><img src="./images/next-arrow.png"></button>
-</section>
+    <button class="next-btn"><img src="./images/next-arrow.png"></button>
+  </section>
 
-<section class="products" id="watch">
-  <button class="prev-btn"><img src="./images/prev-arrow.png"></button>
+  <section class="products" id="mac">
+    <button class="prev-btn"><img src="./images/prev-arrow.png"></button>
 
-  <h2>Apple Watch</h2>
+    <h2>Mac</h2>
 
-  <div class="carousel">
-    <div class="product-list">
-            <!-- sản phẩm ở đây -->
+    <div class="carousel">
+      <div class="product-list">
+        <!-- sản phẩm ở đây -->
+      </div>
     </div>
-  </div>
-  <button class="next-btn"><img src="./images/next-arrow.png"></button>
-</section>
+    <button class="next-btn"><img src="./images/next-arrow.png"></button>
+  </section>
 
-<section class="products" id="airpods">
-  <button class="prev-btn"><img src="./images/prev-arrow.png"></button>
+  <section class="products" id="ipad">
+    <button class="prev-btn"><img src="./images/prev-arrow.png"></button>
 
-  <h2>AirPods</h2>
+    <h2>iPad</h2>
 
-  <div class="carousel">
-    <div class="product-list">
-            <!-- sản phẩm ở đây -->
+    <div class="carousel">
+      <div class="product-list">
+        <!-- sản phẩm ở đây -->
+      </div>
     </div>
-  </div>
-  <button class="next-btn"><img src="./images/next-arrow.png"></button>
-</section>
+    <button class="next-btn"><img src="./images/next-arrow.png"></button>
+  </section>
 
-<section class="products" id="phukien">
-  <button class="prev-btn"><img src="./images/prev-arrow.png"></button>
+  <section class="products" id="watch">
+    <button class="prev-btn"><img src="./images/prev-arrow.png"></button>
 
-  <h2>Phụ Kiện</h2>
+    <h2>Apple Watch</h2>
 
-  <div class="carousel">
-    <div class="product-list">
-            <!-- sản phẩm ở đây -->
+    <div class="carousel">
+      <div class="product-list">
+        <!-- sản phẩm ở đây -->
+      </div>
     </div>
-  </div>
-  <button class="next-btn"><img src="./images/next-arrow.png"></button>
-</section>
-<footer>
-  <div class="footer-container">
-    <div class="footer-column">
-      <h3>Mua sắm & Tìm hiểu</h3>
-      <ul>
-        <li><a href="trangchu.html#mac">Mac</a></li>
-        <li><a href="trangchu.html#ipad">iPad</a></li>
-        <li><a href="trangchu.html#iphone">iPhone</a></li>
-        <li><a href="trangchu.html#watch">Watch</a></li>
-        <li><a href="trangchu.html#airpods">AirPods</a></li>
-        <li><a href="trangchu.html#phukien">Phụ kiện</a></li>
-      </ul>
+    <button class="next-btn"><img src="./images/next-arrow.png"></button>
+  </section>
+
+  <section class="products" id="airpods">
+    <button class="prev-btn"><img src="./images/prev-arrow.png"></button>
+
+    <h2>AirPods</h2>
+
+    <div class="carousel">
+      <div class="product-list">
+        <!-- sản phẩm ở đây -->
+      </div>
     </div>
-    <div class="footer-column">
-      <h3>Tài khoản & Dịch vụ</h3>
-      <ul>
-        <li><a href="#">Quản lý tài khoản</a></li>
-        <li><a href="#">Lịch sử mua hàng</a></li>
-        <li><a href="#">Trung tâm hỗ trợ</a></li>
-        <li><a href="#">Chính sách bảo hành</a></li>
-        <li><a href="#">Chính sách đổi trả</a></li>
-      </ul>
+    <button class="next-btn"><img src="./images/next-arrow.png"></button>
+  </section>
+
+  <section class="products" id="phukien">
+    <button class="prev-btn"><img src="./images/prev-arrow.png"></button>
+
+    <h2>Phụ Kiện</h2>
+
+    <div class="carousel">
+      <div class="product-list">
+        <!-- sản phẩm ở đây -->
+      </div>
     </div>
-    <div class="footer-column">
-      <h3>Về Eden Tech</h3>
-      <ul>
-        <li><a href="#">Giới thiệu</a></li>
-        <li><a href="#">Hệ thống cửa hàng</a></li>
-        <li><a href="#">Tuyển dụng</a></li>
-        <li><a href="#">Liên hệ</a></li>
-      </ul>
-    </div>
-    <div class="footer-column">
+    <button class="next-btn"><img src="./images/next-arrow.png"></button>
+  </section>
+  <footer>
+    <div class="footer-container">
+      <div class="footer-column">
+        <h3>Mua sắm & Tìm hiểu</h3>
+        <ul>
+          <li><a href="trangchu.html#mac">Mac</a></li>
+          <li><a href="trangchu.html#ipad">iPad</a></li>
+          <li><a href="trangchu.html#iphone">iPhone</a></li>
+          <li><a href="trangchu.html#watch">Watch</a></li>
+          <li><a href="trangchu.html#airpods">AirPods</a></li>
+          <li><a href="trangchu.html#phukien">Phụ kiện</a></li>
+        </ul>
+      </div>
+      <div class="footer-column">
+        <h3>Tài khoản & Dịch vụ</h3>
+        <ul>
+          <li><a href="#">Quản lý tài khoản</a></li>
+          <li><a href="#">Lịch sử mua hàng</a></li>
+          <li><a href="#">Trung tâm hỗ trợ</a></li>
+          <li><a href="#">Chính sách bảo hành</a></li>
+          <li><a href="#">Chính sách đổi trả</a></li>
+        </ul>
+      </div>
+      <div class="footer-column">
+        <h3>Về Eden Tech</h3>
+        <ul>
+          <li><a href="#">Giới thiệu</a></li>
+          <li><a href="#">Hệ thống cửa hàng</a></li>
+          <li><a href="#">Tuyển dụng</a></li>
+          <li><a href="#">Liên hệ</a></li>
+        </ul>
+      </div>
+      <div class="footer-column">
         <h3>Theo dõi chúng tôi</h3>
         <div class="social-icons">
-            <a href="#"><img src="./images/facebook.png" alt="Facebook"></a>
-            <a href="#"><img src="./images/instagram.png" alt="Instagram"></a>
-            <a href="#"><img src="./images/tiktok.png" alt="Tiktok"></a>
+          <a href="#"><img src="./images/facebook.png" alt="Facebook"></a>
+          <a href="#"><img src="./images/instagram.png" alt="Instagram"></a>
+          <a href="#"><img src="./images/tiktok.png" alt="Tiktok"></a>
         </div>
         <h3>Thông tin liên hệ</h3>
         <p>
-            Địa chỉ: 123, Đường 3/2, Ninh Kiều, Cần Thơ<br>
-            Hotline: 1900 1234<br>
-            Email: support@edentech.vn
+          Địa chỉ: 123, Đường 3/2, Ninh Kiều, Cần Thơ<br>
+          Hotline: 1900 1234<br>
+          Email: support@edentech.vn
         </p>
+      </div>
     </div>
-  </div>
-  <div class="footer-bottom">
-    <p>Copyright © 2025 Eden Tech. All rights reserved.</p>
-  </div>
-</footer>
+    <div class="footer-bottom">
+      <p>Copyright © 2025 Eden Tech. All rights reserved.</p>
+    </div>
+  </footer>
 </body>
 
 </html>
