--- a/dangky.html
+++ b/dangky.html
@@ -4,37 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đăng ký - Eden Tech</title>
-    <link rel="stylesheet" href="./css/dangky_dangnhap.css">
+    <link rel="stylesheet" href="css/dangky_dangnhap.css">
 </head>
-<body>
-    <div class="auth-container">
-        <div class="auth-box">
-            <a href="trangchu.html" class="home-logo">Eden Tech</a>
-            <h2>Tạo tài khoản</h2>
-            <form id="register-form">
-                <div class="input-group">
-                    <label for="username">Tên hiển thị</label>
-                    <input type="text" id="username" name="username" required>
-                </div>
-                <div class="input-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-                <div class="input-group">
-                    <label for="phone">Số điện thoại</label>
-                    <input type="tel" id="phone" name="phone" required>
-                </div>
-                <div class="input-group">
-                    <label for="password">Mật khẩu</label>
-                    <input type="password" id="password" name="password" required>
-                </div>
-                <button type="submit" class="auth-btn">Đăng ký</button>
-            </form>
-            <p class="switch-form">
-                Đã có tài khoản? <a href="dangnhap.html">Đăng nhập</a>
-            </p>
+<body class="register-page">
+    <div class="auth-wrapper">
+        <div class="auth-branding">
+            <div class="branding-overlay">
+                <h1>Eden Tech</h1>
+                <p>Nền tảng cho những trải nghiệm tuyệt vời.</p>
+            </div>
+        </div>
+        <div class="auth-form-container">
+            <div class="auth-box">
+                <a href="trangchu.html" class="home-logo">Eden Tech</a>
+                <h2>Tạo tài khoản</h2>
+                <form id="register-form">
+                    <div class="input-group"><label for="username">Tên hiển thị</label><input type="text" id="username" name="username" required></div>
+                    <div class="input-group"><label for="email">Email</label><input type="email" id="email" name="email" required></div>
+                    <div class="input-group"><label for="phone">Số điện thoại</label><input type="tel" id="phone" name="phone" required></div>
+                    <div class="input-group"><label for="password">Mật khẩu</label><input type="password" id="password" name="password" required></div>
+                    <button type="submit" class="auth-btn">Đăng ký</button>
+                </form>
+                <p class="switch-form">
+                    Đã có tài khoản? <a href="dangnhap.html">Đăng nhập</a>
+                </p>
+            </div>
         </div>
     </div>
-    <script src="./js/auth.js"></script>
+    <script src="js/auth.js"></script>
+     <script>
+        window.addEventListener('load', () => {
+            document.body.classList.add('loaded');
+        });
+    </script>
 </body>
 </html>
